change project one more time

--- a/html/first.html
+++ b/html/first.html
@@ -7,7 +7,7 @@
        </title>
     <body> 
         <p>
-            this is my first page
+            this is my last project
         </p>
         this is visible
     </head>
